# furniture-shop

./: .gitignore  Makefile  docker-compose.yml
api/: inventory.yml  products.yml
ecs-cluster/: main.tf  role-policy.json  variables.tf
services/inventory/: .dockerignore  Cargo.toml  Dockerfile  app.json.tpl  inventory.json  main.tf  provider.tf  push.sh  terraform.tfvars  test.json  variables.tf
services/inventory/src/: api.rs  handlers.rs  inventory.rs  lib.rs  main.rs  rpc.rs
services/inventory/tests/: api.rs
services/products/: Cargo.toml  Dockerfile  app.json.tpl  ecr.json  main.tf  products.json  terraform.tfvars  test.json  variables.tf
services/products/src/: api.rs  handlers.rs  lib.rs  main.rs  products.rs  rpc.rs
services/products/tests/: api.rs
test-ec2/: main.tf
