[package]
edition = "2021"
name = "inventory"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tarpc = {version = "0.29", features = ["full"]}
tokio = {version = "1.0", features = ["macros", "rt", "rt-multi-thread"]}
warp = "0.3"
